--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "arch/cortex-m0",
     "arch/cortex-m3",
     "arch/cortex-m4",
+    "arch/cortex-m7",
     "arch/rv32i",
     "boards/acd52832",
     "boards/arty_e21",
