--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ members = [
     "chips/arty_e21_chip",
     "chips/e310x",
     "chips/earlgrey",
+    "chips/imxrt10xx",
     "chips/lowrisc",
     "chips/msp432",
     "chips/nrf52",
