chips: refactor imxrt10xx into separate crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,8 @@ members = [
     "chips/arty_e21_chip",
     "chips/e310x",
     "chips/earlgrey",
-    "chips/imxrt10xx",
+    "chips/imxrt",
+    "chips/imxrt1060",
     "chips/lowrisc",
     "chips/msp432",
     "chips/nrf52",
