--- a/chips/imxrt/Cargo.toml
+++ b/chips/imxrt/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "imxrt10xx"
+name = "imxrt"
 version = "0.1.0"
 authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
 edition = "2018"
@@ -8,7 +8,3 @@ edition = "2018"
 cortexm7 = { path = "../../arch/cortex-m7" }
 enum_primitive = { path = "../../libraries/enum_primitive" }
 kernel = { path = "../../kernel" }
-tock-rt0 = { path = "../../libraries/tock-rt0" }
-
-[features]
-imxrt1060 = []
