--- a/boards/teensy4/Cargo.toml
+++ b/boards/teensy4/Cargo.toml
@@ -10,4 +10,4 @@ components = { path = "../components" }
 cortexm7 = { path = "../../arch/cortex-m7" }
 capsules = { path = "../../capsules" }
 kernel = { path = "../../kernel" }
-imxrt10xx = { path = "../../chips/imxrt10xx", features = ["imxrt1060"] }
+imxrt1060 = { path = "../../chips/imxrt1060" }
